@@ -1,13 +1,20 @@
 package com.voisetu.backend;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
+/**
+ * Loads user details from the database for Spring Security authentication.
+ *
+ * Grants {@code ROLE_ADMIN} to admin users — this integrates with
+ * {@code @PreAuthorize("hasRole('ADMIN')")} on AdminController methods.
+ */
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
@@ -21,7 +28,11 @@ public class CustomUserDetailsService implements UserDetailsService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         AppUser appUser = userRepository.findByEmail(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
-        
-        return new User(appUser.email(), appUser.passwordHash(), Collections.emptyList());
+
+        var authorities = appUser.isAdmin()
+                ? List.of(new SimpleGrantedAuthority("ROLE_ADMIN"), new SimpleGrantedAuthority("ROLE_USER"))
+                : List.of(new SimpleGrantedAuthority("ROLE_USER"));
+
+        return new User(appUser.email(), appUser.passwordHash(), authorities);
     }
 }
